Fixed logout not showing
Fixed logout not showing on backwork page

--- a/public/resources/backwork.css
+++ b/public/resources/backwork.css
@@ -194,14 +194,14 @@
   display: flex;
 }
 
-.dropdown-item {
+/*.dropdown-item {
   padding: 10px 12px;
   cursor: pointer;
   border-bottom: 1px #5a4a3f;
   border-left: 1px #5a4a3f;
   border-right: 1px #5a4a3f;
   width: 100%; 
-}
+}*/
 
 .dropdown-item:hover {
   background-color: #f5f5f5;
